--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ bundler_args: "--without development"
 rvm:
 - 2.2.1
 before_script:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- sleep 10
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
 script:
