--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: bundler
 bundler_args: "--without development"
 rvm:
 - 2.2.1
-before_script:
+before_script: phantomjs --version
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
 script:
